--- a/src/Pages/Admin/SideMenu/AdminSideProfile.scss
+++ b/src/Pages/Admin/SideMenu/AdminSideProfile.scss
@@ -1,11 +1,11 @@
-.sideProfile {
+.sideProfile1 {
     display: flex;
     gap: 5px;
     // background-color: white;
-  .SideImage{
+  .SideImage1{
     display: flex;
     gap: 16px;
-    .leftprofile{
+    .leftprofile1{
       display: flex;
       padding-top: 10px;
     }
