--- a/src/Layout/Login.scss
+++ b/src/Layout/Login.scss
@@ -6,7 +6,7 @@
     justify-content: center;
    
   
-    .card {
+    .cardd {
       width: 70%;
       display: flex;
       background-color: white;
