--- a/src/Layout/Navbar/Navbar.scss
+++ b/src/Layout/Navbar/Navbar.scss
@@ -30,10 +30,15 @@
         margin-right: 10px;
     } 
     .profile img:last-child {
-        // display: flex;
-        // align-items: center;
-        width: 30px; /* Adjust dropdown size as needed */
+        display: flex;
+        align-items: center;
+        width: 30px; 
         height: auto;
       }
+     .logout-statement{
+        margin-top: 30px;
+        font-size: 20px;
+        padding-right: 6px;  
+     } 
     }
 }
