--- a/src/Route/AdminMain.scss
+++ b/src/Route/AdminMain.scss
@@ -1,9 +1,8 @@
-.hero{
+.adminmain{
     display: flex;
     justify-content: space-between;
     gap: 10px;
     margin-top: 10px;
     height: 90vh;
     width: 100%;
-   
 }
