--- a/src/Pages/Admin/AddEmployee/Add.scss
+++ b/src/Pages/Admin/AddEmployee/Add.scss
@@ -1,52 +1,63 @@
-.main{
+.add-main {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
+  align-items: center;
   width: 80vw;
   height: 90vh;
   border: 4px solid #007bff;
-  .cont{
-    display: flex;
-    flex-direction: column;
-    width: 40vw;
-    border: 2px solid blue;
-    .form{
-      width: 36vw;
-      padding: 5px 5px 0px 10px;
-      /* Form Header */
 
-.gender{
-  width: 37vw;
-select{
-  width: 35vw;
-  height: 4vh;
-}
-  }
-  .profile{
-    display: flex;
-    gap: -2px;
-    width: 40vw;
-    font-size: 15px;
-    color: #007bff;
-    label{
-      width: 20vw;
+  .cont {
+    width: 100%;
+    padding: 20px;
+    box-sizing: border-box;
+
+    h2 {
+      margin-bottom: 20px;
+    }
+
+    .add-form {
+      width: 100%;
+
+      .formSubmit {
+        display: flex;
+        flex-direction: column;
+
+        .form-inputs {
+          display: flex;
+          gap: 20px;
+          justify-content: space-between;
+
+          .first1 {
+            margin-right: 20px; /* Add space between the two sections */
+            width: 50%;
+            background-color: #ffffff;
+            padding: 10px;
+            border: 1px solid black;
+          }
+
+          .credentials-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            width: 50%;
+          }
+        }
+      }
+
+        button[type="submit"] {
+          margin-top: 20px;
+          padding: 10px 20px;
+          background-color: #007bff;
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+
+          &:hover {
+            background-color: #0056b3;
+          }
+        }
+      }
     }
   }
-}
 
-/* Submit Button */
-.form-group button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 5px 5px;
-  background-color: #007bff;
-  color: #fff;
-  border: none;
-  border-radius: 3px;
-  cursor: pointer;
-}
-
-.form-group button:hover {
-  background-color: #0056b3;
-}
-  }}
