--- a/src/Pages/Admin/Dashboard.scss
+++ b/src/Pages/Admin/Dashboard.scss
@@ -1,3 +1,5 @@
+.Dashboard-Container{
+
 .profile-list {
   display: flex;
   flex-direction: column;
@@ -24,6 +26,13 @@
         border-radius: 5px;
         // margin-top: 20px;
       }
+    }
+  }
+  .img-del-edit{
+    display: flex;
+    img{
+      width: 50px;
+    height: 50px;
     }
   }
   .lists ul {
@@ -54,4 +63,82 @@
     /* Adjust the space between items */
 }
 
+}
+.modal-overlay{
+  display: flex;
+  flex-direction: column;
+  // background-color: red;
+  // padding: -200px;
+  // margin-top: 100px;
+  
+  .modal {
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    // justify-content: space-between;
+    background-color: #eaf0ea;
+    width: 100vh;
+    height: 80vh;
+    margin-top: 10vh;
+    margin-left: 300px;
+    // border: 2px solid red;
+    // width: 50%;
+    // height: 50%;
+    // right: 25%;
+    // left: 25%;
+    // top: 25%;
+    // bottom: 25%;
+   
+    .closeModal{
+      display: flex;
+      // padding: 0px -400px 0px 10px;
+      justify-content: space-around;
+      // margin: 0px 10px 0px 10px;
+      padding-top: 10px;
+      border: 1px solid blue;
+      width: 100%;
+     .img-del-edit{
+      display: flex;
+      img{
+        width: 50px;
+      height: 50px;
+      }
+     } 
+      
+    }
+      .modal-Details{
+display: flex;
+flex-direction: row;
+border: 2px solid;
+width: 100%;
+height: 80%;
+gap: 20px;
+      
+    
+    .first-details{
+      display: flex;
+      flex-direction: column;
+      // border: 2px solid;
+      width: 45%;
+      padding: 10px;
+      gap: 20px;
+      // justify-content: space-between;
+    
+    }
+    .employee-detail{
+      display: flex;
+      flex-direction: column;
+      border: 2px solid aqua;
+      gap: 20px;
+      width: 45%;
+      
+    }
+    .employee-inputs{
+      font-size: 18px;
+      gap: 20px;
+    }
+  }
+}
+
+}
 }
