--- a/src/Pages/Admin/UpdateEmployeModal.scss
+++ b/src/Pages/Admin/UpdateEmployeModal.scss
@@ -1,8 +1,104 @@
-.modal
-{
-display: flex;
-width: 70vw;
-height: 70vh;
-background-color: white;
-border: 1px solid blue;
-}
+// .modal {
+//     position: fixed;
+//     top: 50%;
+//     left: 50%;
+//     right: 50%;
+//     bottom: 50%;
+//     height: 90vh;
+//     transform: translate(-50%, -50%);
+//     background-color: white;
+//     padding: 20px;
+//     border-radius: 5px;
+//     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+//     width: 90vw;
+//     border: 2px solid blue;
+//   }
+  
+//   .header {
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//     margin-bottom: 20px;
+//   }
+  
+//   .header div {
+//     font-size: 18px;
+//   }
+  
+//   .close-btn {
+//     background-color: #ccc;
+//     border: none;
+//     padding: 5px 10px;
+//     border-radius: 5px;
+//     cursor: pointer;
+//   }
+  
+//   .form {
+//     display: flex;
+//     flex-direction: column;
+//   }
+  
+//   .form-inputs {
+//     display: flex;
+//     flex-direction: column;
+//   }
+  
+//   .form-inputs div {
+//     margin-bottom: 10px;
+//   }
+  
+//   .Gender {
+//     margin-bottom: 10px;
+//   }
+  
+//   .credentials-container {
+//     margin-top: 20px;
+//   }
+  
+//   .credentials-section h2 {
+//     font-size: 18px;
+//   }
+  
+//   .more {
+//     margin-top: 20px;
+//   }
+  
+//   .credential-item {
+//     margin-bottom: 10px;
+//   }
+  
+//   button[type="submit"] {
+//     background-color: #007bff;
+//     color: white;
+//     border: none;
+//     padding: 10px 20px;
+//     border-radius: 5px;
+//     cursor: pointer;
+//   }
+  
+//   button[type="submit"]:hover {
+//     background-color: #0056b3;
+//   }
+  
+//   input[type="text"],
+//   input[type="date"],
+//   input[type="email"],
+//   input[type="tel"],
+//   select {
+//     width: 100%;
+//     padding: 8px;
+//     border: 1px solid #ccc;
+//     border-radius: 5px;
+//     box-sizing: border-box;
+//   }
+  
+//   input[type="text"]:focus,
+//   input[type="date"]:focus,
+//   input[type="email"]:focus,
+//   input[type="tel"]:focus,
+//   select:focus {
+//     outline: none;
+//     border-color: #007bff;
+//     box-shadow: 0px 0px 5px rgba(0, 123, 255, 0.5);
+//   }
+  
