--- a/src/Pages/Employee/Payroll/Payroll.scss
+++ b/src/Pages/Employee/Payroll/Payroll.scss
@@ -1,10 +1,11 @@
 .container {
     display: flex;
+    flex-direction: column;
     height: 95vh;
     width: 80vw;
   .main{
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     width: 20vw;
   }
   
