--- a/src/Pages/Admin/SideMenu/AdminSidebar.scss
+++ b/src/Pages/Admin/SideMenu/AdminSidebar.scss
@@ -1,6 +1,7 @@
 .sideba{
     height: 90vh;
     width: 20vw;
-    background-color: blue($color: #000000);
-    border: 2px solid black;  
+    background-color: #063970;
+    border: 2px solid black; 
+    color: white; 
 }
