--- a/src/Layout/Sidebar/Sidebar.scss
+++ b/src/Layout/Sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar{
     height: 90vh;
     width: 20vw;
-    background-color: blue($color: #000000);
-    border: 3px solid black;
+    background-color: #063970;
+    // border: 3px solid black;
    
 }
