--- a/src/Pages/Admin/Dashboard.scss
+++ b/src/Pages/Admin/Dashboard.scss
@@ -1,5 +1,6 @@
 .Dashboard-Container{
-
+display: flex;
+background-color: #eeeee4;
 .profile-list {
   display: flex;
   flex-direction: column;
@@ -12,27 +13,39 @@
     height: 10vh;
     .search-container {
       display: flex;
-      // justify-content: space-between;
-      height: 7vh;
-      width: 100%;
+      justify-content: space-around;
+      height: 5vh;
+      width: 50vw;
       gap: 5px;
       input {
         margin: 10px 10px 0px 10px;
       }
       button {
-        height: 5vh;
-        width: auto;
-        margin: 10px;
-        border-radius: 5px;
-        // margin-top: 20px;
+        width: 30%;
+        padding: 10px ;
+      //   padding-left: 65px;
+      align-self: center;
+        border: none;
+        background-color: #2a277a;
+        color: white;
+        font-weight: bold;
+        cursor: pointer;
+        transition: 1s;
+        border-radius: 10px;
+        
+
+        &:hover{
+          background-color: blue;
+        }
+     
       }
     }
   }
   .img-del-edit{
     display: flex;
     img{
-      width: 50px;
-    height: 50px;
+      width: 30px;
+    height: 30px;
     }
   }
   .lists ul {
@@ -62,6 +75,35 @@
     margin: 10px;
     /* Adjust the space between items */
 }
+tbody{
+  // border: 2px solid blue;
+  img{
+    width: 40px;
+    height: 40px;
+  }
+  button{
+      width: 50%;
+      padding: 10px ;
+    //   padding-left: 65px;
+    align-self: center;
+      border: none;
+      background-color: #2a277a;
+      color: white;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 1s;
+      border-radius: 10px;
+      
+
+      &:hover{
+        background-color: blue;
+      }
+   
+    }
+    .img-del-edit{
+      
+    }
+  }
 
 }
 .modal-overlay{
@@ -100,8 +142,8 @@
      .img-del-edit{
       display: flex;
       img{
-        width: 50px;
-      height: 50px;
+        width: 20px;
+      height: 20px;
       }
      } 
       
