--- a/src/Pages/Admin/Payroll/Payroll.scss
+++ b/src/Pages/Admin/Payroll/Payroll.scss
@@ -2,6 +2,7 @@
     display: flex;
     height: 95vh;
     width: 80vw;
+    background-color: #eeeee4;
   .main{
     display: flex;
     flex-direction: column;
