--- a/src/Pages/Admin/SideMenu/AdminSideMenu.scss
+++ b/src/Pages/Admin/SideMenu/AdminSideMenu.scss
@@ -21,10 +21,12 @@
       gap: 20px;
       padding: 10px;
       height: 40px;
+      color: white;
     //   color: black;
       text-decoration: none;
       p{
         font-size: 16px;
+        color: white;
         
       }
     }
