--- a/src/Route/Admin.scss
+++ b/src/Route/Admin.scss
@@ -1,9 +1,9 @@
 .admin{
-    width: 100vw;
-    height: 100vh;
+    width: 97%;
+    // height: 100vh;
     // margin: 10px;
   padding: 5px;
-    background:linear-gradient(rgba(98, 138, 128, 0.5), rgba(185, 182, 191, 0.5)),
-     url("https://i.pinimg.com/564x/8d/e4/63/8de463477efe7962a6533b12b2f66a05.jpg ") center ;
-     background-size: cover;
+    // background:linear-gradient(rgba(98, 138, 128, 0.5), rgba(185, 182, 191, 0.5)),
+    //  url("https://i.pinimg.com/564x/8d/e4/63/8de463477efe7962a6533b12b2f66a05.jpg ") center ;
+    //  background-size: cover;
 }
