--- a/src/Pages/Admin/Attendance/AttendanceGraph.scss
+++ b/src/Pages/Admin/Attendance/AttendanceGraph.scss
@@ -1,10 +1,11 @@
 .AttendanceGraph{
-    width: 100%;
+    width: 90%;
     height: 50%;
-    border: 2px solid;
+    margin-top: 30px;
+    // border: 2px solid;
     .graph{
-        border: 2px solid blue;
+        // border: 2px solid blue;
         width: 100%;
-        height: 50vh;
+        height: 40vh;
     }
 }
