Done with Admin page

--- a/src/Layout/Login.scss
+++ b/src/Layout/Login.scss
@@ -119,7 +119,7 @@
               
             }
           }
-            .btn{
+            .btn33{
              width: 100%;
              padding-top: 50px;
             align-items: center;
