--- a/src/Pages/Admin/SideMenu/AdminSideMenu.scss
+++ b/src/Pages/Admin/SideMenu/AdminSideMenu.scss
@@ -14,6 +14,9 @@
         text-transform: uppercase;
       }
     }
+    .menuItems{
+      gap: 5rem;
+    }
     .menu-item1{
       display: flex;
     //   justify-content: center;
@@ -34,13 +37,15 @@
 
     .active1 {
       font-weight: bold;
-      color: blue; 
+      color: rgb(227, 227, 235); 
+      // font-size: 20px;
     
       &:before {
         content: '\2022'; 
         color: blue; 
-        margin-left: -10px;
-        margin-right: 5px;
+        margin-left: 5px;
+       
+        margin-right: 10px;
       }
       img {
         filter: brightness(150%); 
