resolved conflict in cloak in

--- a/src/Layout/MainContent/MainContent.scss
+++ b/src/Layout/MainContent/MainContent.scss
@@ -1,9 +1,4 @@
 .app{
     width: 97%;
-  // /
-    // margin: 10px;
-  // padding: 5px;
-    background:linear-gradient(rgba(98, 138, 128, 0.5), rgba(185, 182, 191, 0.5)),
-     url("https://i.pinimg.com/564x/8d/e4/63/8de463477efe7962a6533b12b2f66a05.jpg ") center ;
-     background-size: cover;
+    // background-color: #eeeee4;
 }
