--- a/src/Pages/Employee/DashboardLeft.scss
+++ b/src/Pages/Employee/DashboardLeft.scss
@@ -2,42 +2,37 @@
     display: flex;
     flex-direction: column;
     padding: 10px;
+    background-color: #eeeee4;
     width: 80vw;
     height: 90vh;
     // background-color: #c02323;
     .topper{
         display: flex;
-        width: 93%;
+        flex-direction: column;
+    gap: 50px;
+    
         // border: 2px solid;
         justify-content: space-between;
         padding: 5px;
 
     .tit{
         display: flex;
-        flex-direction: row;
+        // flex-direction: row;
         width: 50vh;
-        // justify-content: space-between;
+        height: 80px;
+        justify-content: space-around;
         // border: 1px solid blue;
-        .title{
-            display: flex;
-            flex-direction: column;
-            // gap: 20px;
-        }
-    }
-    .details-img{
-        display: flex;
-        // justify-content: space-between;
+        width: 80vw;
         img{
-            width: 45px;
-            height: 45px;
-            padding-top: 18px;
+            width: 60px;
         }
     }
+   
 }
  
     h2{
         color: Black;
-        width: 90%;
+        width: 40%;
         border-radius: 5px;
         padding: 5px 0px 5px 5px;
         background-color: #0abe8e;
@@ -56,28 +51,46 @@
         }
   
         &:hover::after{
-          width: 100%;
+          width: 60%;
         }
         }
-    .profile{
-        display: flex;
-        gap: 20px;
-    
-    .profile-details{
-        display: flex;
-        img{
-            width: 70px;
-            height: 70px;
-            margin-right: 30px;
-        }
-    }
-    .list p{
-       padding: 5px;
-    }
-}
-.editform{
-    display: flex;
-    flex-direction: column;
-}
+        .modal-Details{
+            display: flex;
+            margin-top: 30px;
+            flex-direction: row;
+            // border: 2px solid;
+            width: 100%;
+            height: 80%;
+            gap: 80px;
+                  
+                
+                .first-details{
+                  display: flex;
+                  flex-direction: column;
+                  // border: 2px solid;
+                  width: 45%;
+                  padding: 10px;
+                  gap: 50px;
+                  // justify-content: space-between;
+                
+                }
+                .employee-detail{
+                  display: flex;
+                  flex-direction: column;
+                  // border: 2px solid aqua;
+                  gap: 50px;
+                  width: 45%;
+                  
+                }
+                .employee-inputs{
+                  font-size: 20px;
+                  gap: 50px;
+                  // font-weight: bolder;
+                  strong{
+                    font-weight: bolder;
+                  }
+                }
+              } 
+
 
 }
