--- a/src/Pages/Employee/Attendance/Attendance.scss
+++ b/src/Pages/Employee/Attendance/Attendance.scss
@@ -1,6 +1,7 @@
 .timer-container {
     display: flex;
     flex-direction: column;
+    background-color: #eeeee4;
     // border: 1px solid #ccc;
     border-radius: 8px;
     padding: 10px;
